changed link for homepage video

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ function MM_swapImage() { //v3.0
   <!--end #topheader -->
   <div id="HeaderMainContent"><a href="index.html"><img src="assets/house of ming logo.png" alt="House Of Ming Logo" width="180" height="161" border="0" class="ming_logo" /></a><br />
     <div id="headerVideoContainer">
-      <iframe src="https://www.youtube.com/embed/l3Y6S3LAnis?rel=0" width="520" height="293" frameborder="0" class="floatleft"></iframe>
+      <iframe src="https://www.youtube.com/embed/l3Y6S3LAnis" width="520" height="293" frameborder="0" class="floatleft"></iframe>
    <p class="mainVideoHeading">Watch the MY FIRST LOVES promo video HERE</p>
       <br class="clearfloat"/>
     </div>
